fix dropdown button alignment

--- a/src/themes/bulma/bootstrap-table-bulma.scss
+++ b/src/themes/bulma/bootstrap-table-bulma.scss
@@ -27,9 +27,12 @@
 
     .button.dropdown {
       padding: 0;
-      margin: 0;
       border: 0;
-
+      
+      .button {
+        margin: 0;
+      }
+      
       &:not(:first-child) .button {
         border-bottom-left-radius: 0;
         border-top-left-radius: 0;
